--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
         android:layout_marginBottom="18dp"
+        android:onClick="goToSignUp"
         android:text="SIGN UP" />
 
     <Button
@@ -23,5 +24,6 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
         android:layout_marginBottom="87dp"
+        android:onClick="goToSignIn"
         android:text="SIGN IN" />
 </RelativeLayout>
