--- a/app/src/main/res/layout/activity_invite_code.xml
+++ b/app/src/main/res/layout/activity_invite_code.xml
@@ -34,5 +34,6 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="163dp"
+        android:onClick="registerUser"
         android:text="Register" />
 </RelativeLayout>
