--- a/app/src/main/res/layout/activity_name.xml
+++ b/app/src/main/res/layout/activity_name.xml
@@ -4,6 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginEnd="@dimen/activity_horizontal_margin"
+    android:layout_marginStart="@dimen/activity_horizontal_margin"
     tools:context=".NameActivity">
 
     <de.hdodenhof.circleimageview.CircleImageView
@@ -12,7 +14,7 @@
         android:layout_height="128dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="@dimen/activity_vertical_margin"
         android:onClick="selectImage"
         android:src="@drawable/default_profile" />
 
@@ -22,18 +24,21 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="169dp"
+        android:layout_marginTop="160dp"
         android:ems="10"
         android:hint="Enter name"
+        android:imeOptions="actionDone"
         android:inputType="textPersonName" />
 
     <Button
         android:id="@+id/button_next_name_signup"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="237dp"
+        android:layout_marginBottom="@dimen/activity_vertical_margin"
+        android:background="@android:color/holo_purple"
         android:onClick="generateCode"
-        android:text="Next" />
+        android:text="Next"
+        android:textColor="@android:color/background_light" />
 </RelativeLayout>
