--- a/app/src/main/res/layout/activity_password.xml
+++ b/app/src/main/res/layout/activity_password.xml
@@ -4,6 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginStart="@dimen/activity_horizontal_margin"
+    android:layout_marginEnd="@dimen/activity_horizontal_margin"
     tools:context=".PasswordActivity">
 
     <EditText
@@ -12,9 +14,10 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="120dp"
+        android:layout_marginTop="160dp"
         android:ems="10"
         android:hint="Enter password"
+        android:imeOptions="actionDone"
         android:inputType="textPassword" />
 
     <Button
@@ -23,6 +26,9 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
+        android:layout_marginBottom="@dimen/activity_vertical_margin"
+        android:background="@android:color/holo_purple"
         android:onClick="goToNamePickActivity"
-        android:text="Next" />
+        android:text="Next"
+        android:textColor="@android:color/background_light" />
 </RelativeLayout>
