--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -4,6 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginStart="@dimen/activity_horizontal_margin"
+    android:layout_marginEnd="@dimen/activity_horizontal_margin"
     tools:context=".SigninActivity">
 
     <EditText
@@ -12,9 +14,10 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="75dp"
+        android:layout_marginTop="160dp"
         android:ems="10"
         android:hint="Enter email"
+        android:imeOptions="actionNext"
         android:inputType="textEmailAddress" />
 
     <EditText
@@ -23,9 +26,10 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="139dp"
+        android:layout_marginTop="215dp"
         android:ems="10"
         android:hint="Enter password"
+        android:imeOptions="actionDone"
         android:inputType="textPassword" />
 
     <Button
@@ -33,8 +37,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
+        android:layout_alignParentBottom="true"
         android:layout_marginTop="211dp"
+        android:layout_marginBottom="@dimen/activity_vertical_margin"
+        android:background="@android:color/holo_purple"
         android:onClick="signIn"
-        android:text="SIGN IN" />
+        android:text="SIGN IN"
+        android:textColor="@android:color/background_light" />
 </RelativeLayout>
