--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -4,6 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginStart="@dimen/activity_horizontal_margin"
+    android:layout_marginEnd="@dimen/activity_horizontal_margin"
     tools:context=".SignupActivity">
 
     <EditText
@@ -12,9 +14,10 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="97dp"
+        android:layout_marginTop="160dp"
         android:ems="10"
         android:hint="Enter email"
+        android:imeOptions="actionDone"
         android:inputType="textEmailAddress" />
 
     <Button
@@ -23,7 +26,10 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
+        android:layout_marginBottom="@dimen/activity_vertical_margin"
         android:layout_weight="1"
+        android:background="@android:color/holo_purple"
         android:onClick="goToPasswordActivity"
-        android:text="Next" />
+        android:text="Next"
+        android:textColor="@android:color/background_light" />
 </RelativeLayout>
