--- a/app/src/main/res/menu/activity_navigation_drawer.xml
+++ b/app/src/main/res/menu/activity_navigation_drawer.xml
@@ -3,6 +3,21 @@
 
     <group android:checkableBehavior="single">
         <item
+            android:id="@+id/nav_joinCircle"
+            android:title="Join Circle"/>
+        <item
+            android:id="@+id/nav_myCircle"
+            android:title="My Circle"/>
+        <item
+            android:id="@+id/nav_joinedCircle"
+            android:title="Joined Circle"/>
+        <item
+            android:id="@+id/nav_inviteMembers"
+            android:title="Invite Members"/>
+        <item
+            android:id="@+id/nav_shareLocation"
+            android:title="Share Location"/>
+        <item
             android:id="@+id/nav_signOut"
             android:title="Sign Out"/>
     </group>
