--- a/app/src/main/res/layout/activity_account_main.xml
+++ b/app/src/main/res/layout/activity_account_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:layout_marginStart="@dimen/activity_horizontal_margin"
     android:layout_marginEnd="@dimen/activity_horizontal_margin"
-    tools:context=".MainActivity">
+    tools:context=".AccountMainActivity">
 
     <Button
         android:id="@+id/button_signin_nav"
@@ -16,7 +16,7 @@
         android:layout_alignParentStart="true"
         android:layout_marginBottom="75dp"
         android:background="@android:color/holo_green_light"
-        android:onClick="goToSignIn"
+        android:onClick="sign_in"
         android:text="SIGN IN"
         android:textColor="@android:color/background_light" />
 
@@ -28,17 +28,16 @@
         android:layout_alignParentStart="true"
         android:layout_marginBottom="14dp"
         android:background="@android:color/holo_blue_dark"
-        android:onClick="goToSignUp"
+        android:onClick="sign_up"
         android:text="SIGN UP"
         android:textColor="@android:color/background_light" />
 
     <ImageView
-        android:id="@+id/imageView_main"
         android:layout_width="match_parent"
-        android:layout_height="400dp"
+        android:layout_height="380dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        app:srcCompat="@drawable/ic_launcher_background" />
+        app:srcCompat="@drawable/icon_marker" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -47,7 +46,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="140dp"
         android:text="PEOPLE TRACKER"
-        android:textColor="@android:color/darker_gray"
+        android:textColor="?attr/actionModeSplitBackground"
         android:textSize="18sp"
         android:textStyle="bold" />
 
