--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -8,40 +8,56 @@
     android:layout_marginEnd="@dimen/activity_horizontal_margin"
     tools:context=".SigninActivity">
 
-    <EditText
-        android:id="@+id/editText_email_signin"
+    <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="160dp"
-        android:ems="10"
-        android:hint="Enter email"
-        android:imeOptions="actionNext"
-        android:inputType="textEmailAddress" />
+        android:layout_centerVertical="true">
+        <EditText
+            android:id="@+id/editText_email_signin"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="Enter email"
+            android:imeOptions="actionNext"
+            android:inputType="textEmailAddress" />
+    </android.support.design.widget.TextInputLayout>
 
-    <EditText
-        android:id="@+id/editText_password_signin"
+
+    <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="215dp"
-        android:ems="10"
-        android:hint="Enter password"
-        android:imeOptions="actionDone"
-        android:inputType="textPassword" />
+        android:layout_marginBottom="201dp">
+        <EditText
+            android:id="@+id/editText_password_signin"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="Enter password"
+            android:imeOptions="actionDone"
+            android:inputType="textPassword" />
+    </android.support.design.widget.TextInputLayout>
 
     <Button
         android:id="@+id/button_signin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginTop="211dp"
+        android:layout_alignParentStart="true"
         android:layout_marginBottom="@dimen/activity_vertical_margin"
+        android:layout_marginTop="211dp"
         android:background="@android:color/holo_purple"
-        android:onClick="signIn"
+        android:onClick="sign_in_method"
         android:text="SIGN IN"
         android:textColor="@android:color/background_light" />
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="240dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:src="@drawable/icon_sign_in" />
+
 </RelativeLayout>
