--- a/app/src/main/res/layout/activity_signup_email.xml
+++ b/app/src/main/res/layout/activity_signup_email.xml
@@ -6,19 +6,22 @@
     android:layout_height="match_parent"
     android:layout_marginStart="@dimen/activity_horizontal_margin"
     android:layout_marginEnd="@dimen/activity_horizontal_margin"
-    tools:context=".SignupActivity">
+    tools:context=".SignupEmailActivity">
 
-    <EditText
-        android:id="@+id/editText_email_signup"
+    <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="160dp"
-        android:ems="10"
-        android:hint="Enter email"
-        android:imeOptions="actionDone"
-        android:inputType="textEmailAddress" />
+        android:layout_centerVertical="true">
+        <EditText
+            android:id="@+id/editText_email_signup"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="Enter email"
+            android:imeOptions="actionDone"
+            android:inputType="textEmailAddress" />
+    </android.support.design.widget.TextInputLayout>
 
     <Button
         android:id="@+id/button_next_email_signup"
@@ -29,7 +32,14 @@
         android:layout_marginBottom="@dimen/activity_vertical_margin"
         android:layout_weight="1"
         android:background="@android:color/holo_purple"
-        android:onClick="goToPasswordActivity"
+        android:onClick="email_to_password"
         android:text="Next"
         android:textColor="@android:color/background_light" />
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="240dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:src="@drawable/icon_sign_up" />
 </RelativeLayout>
