--- a/app/src/main/res/layout/activity_signup_invite_code.xml
+++ b/app/src/main/res/layout/activity_signup_invite_code.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:layout_marginStart="@dimen/activity_horizontal_margin"
     android:layout_marginEnd="@dimen/activity_horizontal_margin"
-    tools:context=".InviteCodeActivity">
+    tools:context=".SignupInviteCodeActivity">
 
     <TextView
         android:id="@+id/textView_circle_code"
@@ -39,7 +39,14 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="@dimen/activity_vertical_margin"
         android:background="@android:color/holo_purple"
-        android:onClick="registerUser"
+        android:onClick="register_user"
         android:text="Register"
         android:textColor="@android:color/background_light" />
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="240dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        app:srcCompat="@drawable/icon_invite" />
 </RelativeLayout>
