--- a/app/src/main/res/layout/activity_signup_password.xml
+++ b/app/src/main/res/layout/activity_signup_password.xml
@@ -6,19 +6,22 @@
     android:layout_height="match_parent"
     android:layout_marginStart="@dimen/activity_horizontal_margin"
     android:layout_marginEnd="@dimen/activity_horizontal_margin"
-    tools:context=".PasswordActivity">
+    tools:context=".SignupPasswordActivity">
 
-    <EditText
-        android:id="@+id/editText_password_signup"
+    <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="160dp"
-        android:ems="10"
-        android:hint="Enter password"
-        android:imeOptions="actionDone"
-        android:inputType="textPassword" />
+        android:layout_centerVertical="true">
+        <EditText
+            android:id="@+id/editText_password_signup"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="Enter password"
+            android:imeOptions="actionDone"
+            android:inputType="textPassword" />
+    </android.support.design.widget.TextInputLayout>
 
     <Button
         android:id="@+id/button_next_password_signup"
@@ -28,7 +31,14 @@
         android:layout_alignParentStart="true"
         android:layout_marginBottom="@dimen/activity_vertical_margin"
         android:background="@android:color/holo_purple"
-        android:onClick="goToNamePickActivity"
+        android:onClick="password_to_name"
         android:text="Next"
         android:textColor="@android:color/background_light" />
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="240dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:src="@drawable/icon_password" />
 </RelativeLayout>
