--- a/app/src/main/res/layout/content_navigation.xml
+++ b/app/src/main/res/layout/content_navigation.xml
@@ -14,5 +14,14 @@
     tools:showIn="@layout/app_bar_navigation">
 
 
-
+    <Button
+        android:id="@+id/button_location"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginBottom="25dp"
+        android:layout_marginEnd="25dp"
+        android:background="@android:color/transparent"
+        android:drawableBottom="@drawable/icon_location" />
 </RelativeLayout>
