--- a/app/src/main/res/layout/activity_user_location_main.xml
+++ b/app/src/main/res/layout/activity_user_location_main.xml
@@ -8,7 +8,8 @@
     android:fitsSystemWindows="true"
     tools:openDrawer="start">
 
-    <include layout="@layout/app_bar_navigation"
+    <include
+        layout="@layout/app_bar_user_location_main"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
@@ -18,7 +19,7 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
-        app:headerLayout="@layout/nav_header_navigation"
-        app:menu="@menu/activity_navigation_drawer" />
+        app:headerLayout="@layout/nav_header_user_location_main"
+        app:menu="@menu/activity_user_location_main_drawer" />
 
 </android.support.v4.widget.DrawerLayout>
