--- a/app/src/main/res/layout/card_layout.xml
+++ b/app/src/main/res/layout/card_layout.xml
@@ -23,13 +23,13 @@
             android:orientation="horizontal">
 
             <android.support.v4.widget.CircleImageView
-                android:layout_width="0dp"
+                android:layout_width="5dp"
                 android:layout_height="50dp"
                 android:layout_weight="2"
                 android:src="@drawable/icon_profile"/>
             
             <TextView
-                android:layout_width="0"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="7"
                 android:textStyle="bold"
@@ -39,7 +39,7 @@
                 android:id="@+id/item_title"/>
 
             <ImageView
-                android:layout_width="0dp"
+                android:layout_width="5dp"
                 android:layout_height="40dp"
                 android:layout_weight="1"
                 android:src="@drawable/icon_location_off"/>
