--- a/app/src/main/res/layout/nav_header_user_location_main.xml
+++ b/app/src/main/res/layout/nav_header_user_location_main.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="@dimen/nav_header_height"
     android:background="@drawable/side_nav_bar"
-    android:gravity="bottom"
+    android:gravity="center_vertical"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -14,11 +14,10 @@
 
     <ImageView
         android:id="@+id/imageView_user_image"
-        android:layout_width="65dp"
-        android:layout_height="65dp"
-        android:contentDescription="@string/nav_header_desc"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        app:srcCompat="@mipmap/ic_launcher_round" />
+        android:contentDescription="@string/nav_header_desc" />
 
     <TextView
         android:id="@+id/textView_title_name"
