--- a/app/src/main/res/layout/activity_account_main.xml
+++ b/app/src/main/res/layout/activity_account_main.xml
@@ -20,7 +20,8 @@
         android:background="@android:color/holo_green_light"
         android:onClick="sign_in"
         android:text="SIGN IN"
-        android:textColor="@android:color/background_light" />
+        android:textColor="@android:color/background_light"
+        tools:ignore="RtlCompat" />
 
     <Button
         android:id="@+id/button_signup_nav"
@@ -32,14 +33,16 @@
         android:background="@android:color/holo_blue_dark"
         android:onClick="sign_up"
         android:text="SIGN UP"
-        android:textColor="@android:color/background_light" />
+        android:textColor="@android:color/background_light"
+        tools:ignore="RtlCompat" />
 
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="380dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        app:srcCompat="@drawable/icon_marker" />
+        app:srcCompat="@drawable/icon_marker"
+        tools:ignore="RtlCompat" />
 
     <TextView
         android:layout_width="wrap_content"
