--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -14,7 +13,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_centerVertical="true">
+        android:layout_centerVertical="true"
+        tools:ignore="RtlCompat">
         <EditText
             android:id="@+id/editText_email_signin"
             android:layout_width="match_parent"
@@ -31,7 +31,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
-        android:layout_marginBottom="201dp">
+        android:layout_marginBottom="201dp"
+        tools:ignore="RtlCompat">
         <EditText
             android:id="@+id/editText_password_signin"
             android:layout_width="match_parent"
@@ -53,13 +54,15 @@
         android:background="@android:color/holo_purple"
         android:onClick="sign_in_method"
         android:text="SIGN IN"
-        android:textColor="@android:color/background_light" />
+        android:textColor="@android:color/background_light"
+        tools:ignore="RtlCompat" />
 
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="240dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:src="@drawable/icon_sign_in" />
+        android:src="@drawable/icon_sign_in"
+        tools:ignore="RtlCompat" />
 
 </RelativeLayout>
