--- a/app/src/main/res/layout/activity_signup_email.xml
+++ b/app/src/main/res/layout/activity_signup_email.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -14,7 +13,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_centerVertical="true">
+        android:layout_centerVertical="true"
+        tools:ignore="RtlCompat">
         <EditText
             android:id="@+id/editText_email_signup"
             android:layout_width="match_parent"
@@ -36,12 +36,14 @@
         android:background="@android:color/holo_purple"
         android:onClick="email_to_password"
         android:text="Next"
-        android:textColor="@android:color/background_light" />
+        android:textColor="@android:color/background_light"
+        tools:ignore="RtlCompat" />
 
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="240dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:src="@drawable/icon_sign_up" />
+        android:src="@drawable/icon_sign_up"
+        tools:ignore="RtlCompat" />
 </RelativeLayout>
