--- a/app/src/main/res/layout/activity_signup_name.xml
+++ b/app/src/main/res/layout/activity_signup_name.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -24,7 +23,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_centerVertical="true">
+        android:layout_centerVertical="true"
+        tools:ignore="RtlCompat">
 
         <EditText
             android:id="@+id/editText_name_signup"
@@ -46,7 +46,8 @@
         android:background="@android:color/holo_purple"
         android:onClick="generate_code"
         android:text="Next"
-        android:textColor="@android:color/background_light" />
+        android:textColor="@android:color/background_light"
+        tools:ignore="RtlCompat" />
 
     <TextView
         android:layout_width="match_parent"
