--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -7,7 +7,7 @@
     android:focusableInTouchMode="true"
     android:layout_marginStart="@dimen/activity_horizontal_margin"
     android:layout_marginEnd="@dimen/activity_horizontal_margin"
-    tools:context=".SigninActivity">
+    tools:context=".activities.SigninActivity">
 
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
