--- a/app/src/main/res/layout/activity_signup_invite_code.xml
+++ b/app/src/main/res/layout/activity_signup_invite_code.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:layout_marginStart="@dimen/activity_horizontal_margin"
     android:layout_marginEnd="@dimen/activity_horizontal_margin"
-    tools:context=".SignupInviteCodeActivity">
+    tools:context=".activities.SignupInviteCodeActivity">
 
     <TextView
         android:id="@+id/textView_circle_code"
