--- a/app/src/main/res/layout/activity_signup_password.xml
+++ b/app/src/main/res/layout/activity_signup_password.xml
@@ -7,7 +7,7 @@
     android:focusableInTouchMode="true"
     android:layout_marginStart="@dimen/activity_horizontal_margin"
     android:layout_marginEnd="@dimen/activity_horizontal_margin"
-    tools:context=".SignupPasswordActivity">
+    tools:context=".activities.SignupPasswordActivity">
 
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
