--- a/app/src/main/res/layout/content_user_location_main.xml
+++ b/app/src/main/res/layout/content_user_location_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".UserLocationMainActivity"
+    tools:context=".activities.UserLocationMainActivity"
     tools:showIn="@layout/app_bar_user_location_main">
 
     <fragment xmlns:android="http://schemas.android.com/apk/res/android"
