--- a/app/src/main/res/layout/activity_live_map.xml
+++ b/app/src/main/res/layout/activity_live_map.xml
@@ -1,21 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".activities.MyCircleActivity">
+    tools:context=".activities.LiveMapActivity">
 
     <android.support.v7.widget.Toolbar
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/toolbar"
+        android:id="@+id/livemap_toolbar"
         app:titleTextColor="@android:color/background_light"
         android:background="@android:color/holo_red_light"/>
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler_view"
+    <fragment
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_centerInParent="true" />
+        android:id="@+id/live_map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_below="@+id/livemap_toolbar"/>
+
 </RelativeLayout>
