--- a/app/src/main/res/layout/activity_join_circle.xml
+++ b/app/src/main/res/layout/activity_join_circle.xml
@@ -11,9 +11,8 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_above="@+id/pinview"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="203dp"
         android:text="Enter circle code to join"
         android:textAlignment="center"
         android:textSize="16sp"
@@ -44,4 +43,12 @@
         android:text="Add"
         android:textColor="@android:color/background_light"
         tools:ignore="RtlCompat" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="match_parent"
+        android:layout_height="240dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        app:srcCompat="@android:color/transparent" />
 </RelativeLayout>
