--- a/app/src/main/res/layout/activity_joined_circles.xml
+++ b/app/src/main/res/layout/activity_joined_circles.xml
@@ -1,21 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".activities.MyCircleActivity">
+    tools:context=".activities.JoinedCirclesActivity">
 
     <android.support.v7.widget.Toolbar
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/toolbar"
+        android:id="@+id/joined_circle_toolbar"
         app:titleTextColor="@android:color/background_light"
         android:background="@android:color/holo_red_light"/>
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_centerInParent="true" />
+        android:id="@+id/recycler_view_joined"
+        android:layout_alignParentStart="true"
+        android:layout_below="@id/joined_circle_toolbar"
+        tools:ignore="RtlCompat" />
+
 </RelativeLayout>
