--- a/app/src/main/res/layout/card_layout.xml
+++ b/app/src/main/res/layout/card_layout.xml
@@ -25,6 +25,7 @@
                 android:layout_width="5dp"
                 android:layout_height="50dp"
                 android:layout_weight="2"
+                android:id="@+id/image_profile"
                 android:src="@drawable/icon_profile"/>
             
             <TextView
@@ -39,8 +40,9 @@
 
             <ImageView
                 android:layout_width="5dp"
-                android:layout_height="40dp"
+                android:layout_height="50dp"
                 android:layout_weight="1"
+                android:id="@+id/online_indicator"
                 android:src="@drawable/icon_location_off"/>
 
         </LinearLayout>
