signin email,password commit

--- a/app/src/main/res/layout/activity_signup_name.xml
+++ b/app/src/main/res/layout/activity_signup_name.xml
@@ -16,7 +16,6 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:onClick="select_image"
         android:src="@drawable/icon_profile" />
 
     <android.support.design.widget.TextInputLayout
@@ -54,8 +53,18 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="79dp"
-        android:text="Click on the icon to add profile picture."
+        android:layout_marginBottom="150dp"
+        android:text="Click on the icon below to add profile picture."
         android:textAlignment="center"
         android:textColor="@android:color/darker_gray" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/addphotoTextView"
+        android:padding="20dp"
+        android:textAlignment="center"
+        android:layout_above="@id/button_next_name_signup"
+        android:onClick="openGallery"
+        android:text="Add Photo"/>
 </RelativeLayout>
