--- a/app/src/main/res/layout/activity_signin_password.xml
+++ b/app/src/main/res/layout/activity_signin_password.xml
@@ -6,29 +6,48 @@
     android:layout_height="match_parent"
     tools:context=".activities.SigninPasswordActivity">
 
-    <android.support.design.widget.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/signin_password_edittext"
-            android:hint="Enter your password"
-            android:inputType="textPassword"
-            android:padding="17dp"
-            android:textSize="18sp"
-            android:layout_marginTop="151dp"
-            android:ems="10"/>
-    </android.support.design.widget.TextInputLayout>
-
-    <Button
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:minHeight="?attr/actionBarSize"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/signin_password_btn"
-        android:text="Sign In"
-        android:onClick="Signin"
+        app:titleTextColor="@android:color/white"
+        android:background="?attr/colorPrimary">
+    </android.support.v7.widget.Toolbar>
+
+    <EditText
+        android:id="@+id/editTextPass"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:hint="Enter your password"
+        android:gravity="center"
+        android:padding="17dp"
+        android:textSize="18sp"
+        android:layout_below="@+id/toolbar"
+        android:layout_marginTop="151dp"
+        android:ems="10"
+        android:inputType="textPassword"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentLeft="true" />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:textColor="@android:color/background_light"
-        android:background="@android:color/holo_red_light" />
+        android:text="Next"
+        android:onClick="Login"
+        android:background="@drawable/button_shape"
+        android:textAllCaps="false"
+        android:textSize="18sp"
+        android:textColor="#FFFFFF"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true" />
+
+
 
 </RelativeLayout>
