--- a/app/src/main/res/layout/activity_signup_password.xml
+++ b/app/src/main/res/layout/activity_signup_password.xml
@@ -1,48 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:focusable="true"
-    android:focusableInTouchMode="true"
-    android:layout_marginStart="@dimen/activity_horizontal_margin"
-    android:layout_marginEnd="@dimen/activity_horizontal_margin"
     tools:context=".activities.SignupPasswordActivity">
 
-    <android.support.design.widget.TextInputLayout
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbarPassword"
+        android:minHeight="?attr/actionBarSize"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:titleTextColor="@android:color/white"
+        android:background="?attr/colorPrimary">
+    </android.support.v7.widget.Toolbar>
+
+    <EditText
+        android:id="@+id/editTextPassword"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_centerVertical="true"
-        tools:ignore="RtlCompat">
-        <EditText
-            android:id="@+id/editText_password_signup"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:hint="Enter password"
-            android:imeOptions="actionDone"
-            android:inputType="textPassword" />
-    </android.support.design.widget.TextInputLayout>
+        android:hint="Create a password"
+        android:gravity="center"
+        android:padding="17dp"
+        android:textSize="18sp"
+        android:layout_below="@+id/toolbarPassword"
+        android:layout_marginTop="151dp"
+        android:ems="10"
+        android:inputType="textPassword"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true" />
 
     <Button
-        android:id="@+id/button_next_password_signup"
-        android:layout_width="match_parent"
+        android:id="@+id/buttonPassword"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="@dimen/activity_vertical_margin"
-        android:background="@android:color/holo_purple"
-        android:onClick="password_to_name"
         android:text="Next"
-        android:textColor="@android:color/background_light"
-        tools:ignore="RtlCompat" />
-
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="240dp"
+        android:background="@drawable/button_shape"
+        android:textAllCaps="false"
+        android:textSize="18sp"
+        android:onClick="goToNameActivity"
+        android:textColor="#FFFFFF"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:src="@drawable/icon_password"
-        tools:ignore="RtlCompat" />
+        android:layout_alignParentRight="true"
+        android:layout_alignParentLeft="true" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Must be 6 characters or more"
+        android:textSize="15sp"
+        android:layout_marginTop="6dp"
+        android:layout_below="@+id/editTextPassword"
+        android:layout_centerHorizontal="true" />
+
+
+
 </RelativeLayout>
