--- a/app/src/main/res/layout/activity_live_map.xml
+++ b/app/src/main/res/layout/activity_live_map.xml
@@ -7,17 +7,23 @@
     tools:context=".activities.LiveMapActivity">
 
     <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar22"
+        android:minHeight="?attr/actionBarSize"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/livemap_toolbar"
-        app:titleTextColor="@android:color/background_light"
-        android:background="@android:color/holo_red_light"/>
+        app:titleTextColor="@android:color/white"
+        android:background="?attr/colorPrimary">
+    </android.support.v7.widget.Toolbar>
+
 
     <fragment
+        android:id="@+id/map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/live_map"
-        android:name="com.google.android.gms.maps.SupportMapFragment"
-        android:layout_below="@+id/livemap_toolbar"/>
+        android:layout_below="@+id/toolbar22"
+        />
+
+
 
 </RelativeLayout>
