--- a/app/src/main/res/layout/activity_signin_email.xml
+++ b/app/src/main/res/layout/activity_signin_email.xml
@@ -6,29 +6,49 @@
     android:layout_height="match_parent"
     tools:context=".activities.SigninEmailActivity">
 
-    <android.support.design.widget.TextInputLayout
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:minHeight="?attr/actionBarSize"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/signin_email_edittext"
-            android:hint="Enter your email address"
-            android:padding="17dp"
-            android:textSize="18sp"
-            android:layout_marginTop="151dp"
-            android:inputType="textEmailAddress" />
-    </android.support.design.widget.TextInputLayout>
+        android:layout_height="wrap_content"
+        app:titleTextColor="@android:color/white"
+        android:background="?attr/colorPrimary">
+    </android.support.v7.widget.Toolbar>
+
+    <EditText
+        android:id="@+id/editTextPass"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:hint="Enter your email address"
+        android:gravity="center"
+        android:padding="17dp"
+        android:textSize="18sp"
+        android:layout_below="@+id/toolbar"
+        android:layout_marginTop="151dp"
+        android:ems="10"
+        android:inputType="textEmailAddress"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentRight="true" />
 
     <Button
-        android:layout_width="match_parent"
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:text="Next"
         android:onClick="checkEmail"
-        android:id="@+id/signin_email_btn"
-        android:textColor="@android:color/background_light"
-        android:background="@android:color/holo_red_light"
-        android:textSize="18sp"/>
+        android:background="@drawable/button_shape"
+        android:textAllCaps="false"
+        android:textSize="18sp"
+        android:textColor="#FFFFFF"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentLeft="true" />
+
+
 
 </RelativeLayout>
