--- a/app/src/main/res/layout/activity_signup_invite_code.xml
+++ b/app/src/main/res/layout/activity_signup_invite_code.xml
@@ -1,74 +1,79 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginStart="@dimen/activity_horizontal_margin"
-    android:layout_marginEnd="@dimen/activity_horizontal_margin"
+    android:orientation="vertical"
     tools:context=".activities.SignupInviteCodeActivity">
 
     <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:minHeight="?attr/actionBarSize"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/invite_toolbar"
-        app:titleTextColor="@android:color/background_light"
-        android:background="@color/colorPrimaryDark"/>
-
-
-    <ImageView
-        android:id="@+id/invite_image"
-        android:layout_width="match_parent"
-        android:layout_height="240dp"
-        android:layout_below="@id/invite_toolbar"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        app:srcCompat="@drawable/icon_invite"
-        tools:ignore="RtlCompat" />
+        app:titleTextColor="@android:color/white"
+        android:background="?attr/colorPrimary">
+    </android.support.v7.widget.Toolbar>
 
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/share_textview"
-        android:layout_below="@id/invite_image"
-        android:gravity="center_horizontal"
-        android:text="Share the code with the people you want in circle"
-        android:textSize="16sp"/>
-    
-    <TextView
-        android:id="@+id/code_textview"
+        android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@id/share_textview"
-        android:text="XXXXXX"
-        android:textColor="@color/colorPrimary"
-        android:textSize="30sp"
-        android:textStyle="bold" />
+        android:layout_marginTop="50dp"
+        android:gravity="center_horizontal"
+        android:text="Share this invite code with the people you want in your circle"
+        android:textSize="18sp" />
 
-    <Button
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="34sp"
+        android:layout_gravity="center"
+        android:textColor="@color/colorPrimary"
+        android:fontFamily="monospace"
+        android:layout_marginTop="42dp"
+        android:text="XXXXXX" />
+
+    <TextView
+        android:id="@+id/textView5"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/sendCode_btn"
-        android:background="@color/colorPrimary"
-        android:layout_below="@id/code_textview"
+        android:textSize="16sp"
+        android:gravity="center"
+        android:layout_marginTop="20dp"
+        android:text="Share your code out loud or send it in a message"
+        />
+
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="120dp"
+        android:background="@drawable/button_shape"
+        android:layout_height="wrap_content"
         android:layout_marginTop="37dp"
         android:textSize="16sp"
         android:textAllCaps="false"
         android:text="Send Code"
-        android:textColor="@android:color/background_light"
-        android:onClick="sendCode"/>
-    
-    <TextView
-        android:id="@+id/button_register"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/sendCode_btn"
-        android:layout_marginTop="32dp"
-        android:textSize="20sp"
-        android:textAlignment="center"
         android:layout_gravity="center"
-        android:onClick="register_user"
-        android:text="Register" />
+        android:onClick="sendCode"
+        android:textColor="#FFFF"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
 
-</RelativeLayout>
+        />
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:onClick="Register"
+        android:textSize="20sp"
+        android:layout_gravity="center"
+        android:text="    Done"
+        android:gravity="center_horizontal"
+        />
+
+
+</LinearLayout>
