--- a/app/src/main/res/layout/activity_signup_name.xml
+++ b/app/src/main/res/layout/activity_signup_name.xml
@@ -1,70 +1,97 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:focusable="true"
-    android:focusableInTouchMode="true"
-    android:layout_marginEnd="@dimen/activity_horizontal_margin"
-    android:layout_marginStart="@dimen/activity_horizontal_margin"
     tools:context=".activities.SignupNameActivity">
 
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/circleImageView"
-        android:layout_width="match_parent"
-        android:layout_height="240dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:src="@drawable/icon_profile" />
 
-    <android.support.design.widget.TextInputLayout
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:minHeight="?attr/actionBarSize"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_centerVertical="true"
-        tools:ignore="RtlCompat">
+        app:titleTextColor="@android:color/white"
+        android:background="?attr/colorPrimary">
+    </android.support.v7.widget.Toolbar>
 
-        <EditText
-            android:id="@+id/editText_name_signup"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:hint="Enter name"
-            android:imeOptions="actionDone"
-            android:inputType="textPersonName" />
-    </android.support.design.widget.TextInputLayout>
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/profile_image"
+        android:layout_width="96dp"
+        android:layout_height="96dp"
+        android:src="@drawable/icon_profile"
+        app:civ_border_width="2dp"
+
+        app:civ_border_color="#FF000000"
+        android:layout_below="@+id/toolbar"
+        android:layout_alignEnd="@+id/textView"
+        android:layout_marginEnd="76dp"
+        android:layout_marginTop="25dp"
+        android:layout_alignRight="@+id/textView"
+        android:layout_marginRight="76dp" />
+
+    <EditText
+        android:id="@+id/editTextPass"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:hint="Enter your name"
+        android:gravity="center"
+        android:padding="17dp"
+        android:textSize="18sp"
+        android:layout_marginTop="27dp"
+        android:ems="10"
+        android:inputType="textEmailAddress"
+        android:layout_below="@+id/textView2"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true" />
+
 
     <Button
-        android:id="@+id/button_next_name_signup"
-        android:layout_width="match_parent"
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="@dimen/activity_vertical_margin"
-        android:background="@android:color/holo_purple"
-        android:onClick="generate_code"
         android:text="Next"
-        android:textColor="@android:color/background_light"
-        tools:ignore="RtlCompat" />
+        android:onClick="generateCode"
+        android:background="@drawable/button_shape"
+        android:textAllCaps="false"
+        android:textSize="18sp"
+        android:textColor="#FFFFFF"
+
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentLeft="true" />
 
     <TextView
-        android:layout_width="match_parent"
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="150dp"
-        android:text="Click on the icon below to add profile picture."
-        android:textAlignment="center"
-        android:textColor="@android:color/darker_gray" />
+        android:text="This is how you'll appear on your map"
+        android:textSize="16sp"
+        android:layout_marginTop="7dp"
+        android:layout_below="@+id/editTextPass"
+        android:layout_centerHorizontal="true" />
 
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/addphotoTextView"
-        android:padding="20dp"
-        android:textAlignment="center"
-        android:layout_above="@id/button_next_name_signup"
+        android:id="@+id/textView2"
         android:onClick="openGallery"
-        android:text="Add Photo"/>
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignEnd="@+id/profile_image"
+        android:layout_below="@+id/profile_image"
+        android:layout_marginEnd="15dp"
+        android:layout_marginTop="8dp"
+        android:text="Add photo"
+        android:layout_alignRight="@+id/profile_image"
+        android:layout_marginRight="15dp" />
+
+
+
+
 </RelativeLayout>
