--- a/app/src/main/res/layout/alert_layout.xml
+++ b/app/src/main/res/layout/alert_layout.xml
@@ -1,21 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/alert_card_view"
+    android:id="@+id/card_view"
     android:layout_margin="6dp"
     card_view:cardElevation="3dp"
+
     card_view:cardCornerRadius="12dp"
     card_view:contentPadding="4dp"
     android:foreground="?selectableItemBackground">
+
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:id="@+id/alert_parent_linear"
+        android:id="@+id/parentLinear"
         android:padding="14dp">
 
         <LinearLayout
@@ -25,42 +26,50 @@
             android:orientation="horizontal">
 
             <de.hdodenhof.circleimageview.CircleImageView
-                android:layout_width="5dp"
-                android:layout_height="50dp"
+                android:layout_width="0dp"
                 android:id="@+id/alertImage"
+                android:layout_height="50dp"
                 android:layout_weight="2"
-                android:src="@drawable/icon_profile"/>
-            
+                android:src="@drawable/icon_profile"
+                />
+
             <TextView
-                android:layout_width="5dp"
-                android:layout_height="wrap_content"
                 android:id="@+id/alertName"
+                android:layout_width="0dp"
                 android:layout_weight="7"
-                android:text="Username"
+                android:layout_height="wrap_content"
+                android:text="Dubai"
                 android:textStyle="bold"
                 android:padding="5dp"
-                android:textSize="22sp"/>
+                android:textSize="22sp" />
+
+
+
 
         </LinearLayout>
-        
+
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
+
             <TextView
-                android:layout_width="5dp"
-                android:layout_height="wrap_content"
                 android:id="@+id/alertDate"
+                android:layout_width="0dp"
                 android:layout_weight="7"
+                android:layout_height="wrap_content"
                 android:text="Date:"
                 android:layout_marginStart="10dp"
                 android:layout_marginLeft="10dp"
                 android:padding="5dp"
-                android:textSize="15sp"/>
+                android:textSize="20sp" />
 
         </LinearLayout>
 
     </LinearLayout>
+
+
 
 </android.support.v7.widget.CardView>
