--- a/app/src/main/res/menu/activity_user_location_main_drawer.xml
+++ b/app/src/main/res/menu/activity_user_location_main_drawer.xml
@@ -18,6 +18,11 @@
             android:id="@+id/nav_inviteMembers"
             android:icon="@drawable/icon_invite_drawer"
             android:title="Invite Members"/>
+
+        <item
+            android:id="@+id/nav_alertCenter"
+            android:title="Alerts Center" />
+
         <item
             android:id="@+id/nav_shareLocation"
             android:icon="@drawable/icon_share"
