--- a/app/src/main/res/menu/user_location_main.xml
+++ b/app/src/main/res/menu/user_location_main.xml
@@ -2,8 +2,15 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_send"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
+        android:title="Share Location"
+        app:showAsAction="never" />
+
+
+    <item
+        android:id="@+id/action_stop"
+        android:orderInCategory="100"
+        android:title="Stop sharing Location"
         app:showAsAction="never" />
 </menu>
